2017-01-15  Julien Bect  <julien.bect@centralesupelec.fr>

	Makefile: Achieve reproducible builds without --sort=name

	* Makefile: Achieve reproducible builds without using the option
	--sort=name, which is only available is very recent versions of tar,
	thanks to the recommendations of https://reproducible-builds.org/.

2017-01-14  Julien Bect  <julien.bect@centralesupelec.fr>

	Makefile: Trigger build if hg id as changed

	* Makefile: Trigger build if hg id as changed.

	Makefile: Check if hg clone is clean before processing

	* Makefile: Check if hg clone is clean before processing.

	Makefile: Declare .PHONY targets

	* Makefile: Declare .PHONY targets.

	Makefile: Use timestamp files instead of directories as targets

	* Makefile: Use timestamp files instead of directories as targets.

	Makefile: Add "dist" rule expected by OF admins

	* Makefile: Add "dist" rule to build packages only, as expected by
	Octave Forge admins.

2017-01-14  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_init.m: Display GCC version warning only once (Matlab only)

	* stk_init.m (stk_init__compile): Capture GCC version warnings.
	(stk_init__build_mex): Display GCC version warning only once.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.

2017-01-13  Julien Bect  <julien.bect@centralesupelec.fr>

	README.md: Explain that there are two releases (closes ticket #62)

	* README.md: Explain that there are two releases, and the specific
	"quick start" procedure for each release.

2017-01-09  Julien Bect  <julien.bect@centralesupelec.fr>

	README.md: Remove warning about STK not starting if GLPK is missing

	* README.md: Remove useless warning about STK not starting is
	Octave is configured without GLPK.  I only met this case once, a
	long time ago, with Octave 3.0 on some BD distro...

2017-01-07  Julien Bect  <julien.bect@centralesupelec.fr>
